--- a/package.json
+++ b/package.json
@@ -1,26 +1,37 @@
 {
-  "name": "passwordless-cognito",
+  "name": "webauthn-cognito",
   "version": "0.1.0",
   "bin": {
-    "passwordless-cognito": "bin/passwordless-cognito.js"
+    "webauthn-cognito": "bin/index.js"
   },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "deploy": "npx cdk deploy --all --profile hackathon"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.125",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
+    "aws-cdk": "2.70.0",
+    "aws-sdk": "^2.1477.0",
+    "esbuild": "^0.19.5",
     "jest": "^29.4.3",
     "ts-jest": "^29.0.5",
-    "aws-cdk": "2.67.0",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.5"
   },
   "dependencies": {
+    "@aws-cdk/aws-cognito": "^1.204.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.204.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.437.0",
+    "@aws-sdk/client-ses": "^3.441.0",
+    "@simplewebauthn/server": "^8.3.2",
+    "@simplewebauthn/typescript-types": "^8.3.3",
     "aws-cdk-lib": "2.67.0",
+    "base64url": "^3.0.1",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
